Multiple gene badges selected when gene names start with same name.  Also, the gene ADA couldn't be selected because the list was too long and the dropdown stopped after showing 20.  Now the limit is set to 200 and the dropdown list is scrollable.  Also sorted gene names alphabetically. #359

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1286,8 +1286,10 @@ header {
 
 .tt-dropdown-menu {
   width: 170px;
+  max-height: 400px;
+  overflow-y: scroll;
   margin-top: 2px;
-  padding: 8px 0;
+  padding: 4px 0;
   background-color: #fff;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
